Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002-2012 Simon Josefsson
See the end for copying conditions.

* Version 1.25 (unreleased) [?]

** MSVC: Build fixes related to _GL_ATTRIBUTE_CONST and _GL_ATTRIBUTE_PURE.
Reported by Bartosz Brachaczek <b.brachaczek@gmail.com>.

** tests: Ship with a valgrind suppressions file for the strlen issue.
See bottom of HACKING for discussion.

** API and ABI is backwards compatible with the previous version.

* Version 1.24 (released 2012-01-10) [stable]

** Libraries are re-licensed from LGPLv2+ to dual-GPLv2+|LGPLv3+.

** build: Fix parallel Windows builds.
Reported by René Berber <r.berber@computer.org>.

** libidn: Fix potential infloop in pr29 code.
Reported by Jon Nelson <jnelson@jamponi.net> in
<http://lists.gnu.org/archive/html/help-libidn/2012-01/msg00008.html>.

** libidn: Add 'const' keyword to 'stringprep_ucs4_nfkc_normalize' function.

** Sync glib NFKC code and improve copyright/license statements.

** Update gnulib files and translations.

** API and ABI is backwards compatible with the previous version.

* Version 1.23 (released 2011-11-25) [stable]

** stringprep.h: Now #include's sys/types.h instead of unistd.h for ssize_t.
Some systems (e.g., Mingw with MSVC 9) does not have unistd.h.

** idn-free.h: Protect prototypes with 'extern "C"' marker.
Reported by Bittner Ede <bittner.ede@euronetrt.hu>.

** doc: Update link to experimental TLD tables.
The new link is <https://github.com/gnuthor/tldchk>.

** Update gnulib files and translations.

** QA: Improved cyclo output.  Update GTK-DOC files.  Various bugfixes.

** API and ABI is backwards compatible with the previous version.

* Version 1.22 (released 2011-05-04) [stable]

** libidn: Add -liconv as static library requirement in libidn.pc, for MinGW.
Reported by Volker Grabsch <vog@notjusthosting.com>.

** libidn: Fix memory leak in idna_to_ascii_4z when idna_to_ascii_4i fails.